Sat Dec 23 21:40:32 CST 2000 Adam Heath <doogie@debian.org>

  * main/dpkg.8:  Document COLUMNS environment variable.

Sat Dec 23 21:20:43 CST 2000 Adam Heath <doogie@debian.org>

  * dpkg-deb/extract.c, include/dpkg.h.in, lib/mlib.c,
    main/enquiry.c, main/filesdb.c, main/packages.c, main/remove.c,
    utils/start-stop-daemon.c: Clean up a few gcc warnings.  Note,
    that the warning:
      "deprecated conversion from string constant to `char *'"
    is actually a bug in ncurses-dev(which has been filed as 80410)
    not setting the fmt argument as const.

Sat Dec 23 19:33:05 CST 2000 Adam Heath <doogie@debian.org>

  * automake/dpkg.m4, configure.in, Makefile.conf.in:
    Modified DPKG_C_GCC_TRY_WARNS() to call AC_SUBST, so that we can
    use the result of the test during build time.

Sat Dec 23 16:44:25 CST 2000 Adam Heath <doogie@debian.org>

  * main/depcon.c: Added description for "suggests" in describedepcon().

Sat Dec 23 16:24:31 CST 2000 Adam Heath <doogie@debian.org>

  * debian/dpkg.postinst: Remove bashism.

Sat Dec 23 03:06:19 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/cl-debian.pl: Make '#' optional in Closes: tags.

Sat Dec 23 02:11:27 CST 2000 Adam Heath <doogie@debian.org>

  * scripts/dpkg-buildpackage.sh: Add -t to -h output.

Fri Dec 22 12:35:43 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/update-alternatives.8: use FHS instead of FSSTND

Thu Dec 21 19:30:56 CET 2000 peter karlsson <peterk@debian.org>

  * po/sv.po, doc/sv/dpkg.8: The "Even Merrier Christmas" update of the
    Swedish translation.

Thu Dec 21 03:41:56 CST 2000 Adam Heath <doogie@debian.org>

  * debian/changelog: Closes bug 49581, because we don't use
    external gzip anymore.

Thu Dec 21 03:35:56 CST 2000 Adam Heath <doogie@debian.org>

  * main/enquiry.c: s/--cmpversions/--compare-versions/

Thu Dec 21 03:29:04 CST 2000 Adam Heath <doogie@debian.org>

  * main/dpkg.8: Remove duplicate -R(it doesn't set --root).
