@@ -1,5 +1,6 @@
 dpkg (1.8.0) unstable; urgency=low
 
+  * Add --truename option to dpkg-divert.  Closes: #68489.
   * Documented COLUMNS in dpkg(8).  Closes: #77001.
   * Modified DPKG_C_GCC_TRY_WARNS() to call AC_SUBST, so that we can
     use the result of the test during build time.  Closes: Bug#75138
