@@ -1,3 +1,7 @@
+Sat Dec 23 22:24:23 CST 2000 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-divert.pl: Add --truename option.
+
 Sat Dec 23 21:40:32 CST 2000 Adam Heath <doogie@debian.org>
 
   * main/dpkg.8:  Document COLUMNS environment variable.
